WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277614
[Win WebKitTestRunner] Fails to capture a crash log if the crash happens before SetUnhandledExceptionFilter
https://bugs.webkit.org/show_bug.cgi?id=277614
Summary
[Win WebKitTestRunner] Fails to capture a crash log if the crash happens befo...
Fujii Hironori
Reported
2024-08-04 14:05:53 PDT
After
280706@main
introduced WebKitTestRunnerWS, run-webkit-tests scripts fails to capture a crash log if the crash happens before SetUnhandledExceptionFilter. For example, crashes in JSC::initialize() and WebKit::InitializeWebKit2() aren't captured.
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2024-08-04 14:39:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31708
EWS
Comment 2
2024-08-04 19:07:45 PDT
Committed
281821@main
(20b1ec0bfbe1): <
https://commits.webkit.org/281821@main
> Reviewed commits have been landed. Closing PR #31708 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug