[Win WebKitTestRunner] Fails to capture a crash log if the crash happens before SetUnhandledExceptionFilter https://bugs.webkit.org/show_bug.cgi?id=277614

Reviewed by Ross Kirsling.

After https://commits.webkit.org/280706@main introduced
WebKitTestRunnerWS.exe spawning WebKitTestRunner.exe process,
run-webkit-tests scripts failed to capture a crash log of a child
WebKitTestRunner.exe process if the crash happened before calling
SetUnhandledExceptionFilter. For example, crashes in JSC::initialize()
and WebKit::InitializeWebKit2() were not captured.

Instead of using SetUnhandledExceptionFilter in WebKitTestRunner.exe,
output the #CRASH message in WebKitTestRunnerWS.exe.

* Tools/WebKitTestRunner/win/TestControllerWin.cpp:
(WTR::TestController::platformInitialize):
(WTR::exceptionFilter): Deleted.
* Tools/WebKitTestRunner/win/WebKitTestRunnerWS.cpp:
(wmain):

Canonical link: https://commits.webkit.org/281821@main